Add Fathom analytics

--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,10 @@
   <body class="text-white w-full h-full">
     <div id="root" class="w-full h-full"></div>
     <script src="./index.tsx" type="module"></script>
+    <script
+      src="https://cdn.usefathom.com/script.js"
+      data-site="SIOHFJYR"
+      defer
+    ></script>
   </body>
 </html>
