Update Fathom script

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div id="root" class="w-full h-full"></div>
     <script src="./index.tsx" type="module"></script>
     <script
-      src="https://cdn.usefathom.com/script.js"
+      src="https://optimage.a.msfragala.com/script.js"
       data-site="SIOHFJYR"
       defer
     ></script>
