Migrate to Svelte

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" class="w-full h-full bg-bg">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Optimage</title>
-    <meta
-      name="description"
-      content="Optimage automates optimizing your images for the"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link
-      rel="shortcut icon"
-      type="image/svg+xml"
-      href="/favicons/favicon.svg"
-    />
-    <link rel="mask-icon" type="image/svg+xml" href="/favicons/favicon.svg" />
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
-  <body class="text-white w-full h-full">
-    <div id="root" class="w-full h-full"></div>
-    <script src="./index.tsx" type="module"></script>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
