Add meta description

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <title>Optimage</title>
+    <meta
+      name="description"
+      content="Optimize your images for the web easily by automatically converting to modern image formats and several responsive sizes"
+    />
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
